Allow nested loop after Quit in Fuchsia and Default impls of MessagePump

Some unittests run a nested RunLoop after calling Quit() for the current
one. Fuchsia and Default implementations of MessagePump were not
handling this case properly (DCHECK in debug builds, hang in release).
Updated both implementations to handle this case consistently with
others. Also added a unittest.

Bug: 757093, 706592
Change-Id: I9fabbe09a6ed2178316ec3ba4b2edd8e7b89dd3f
Reviewed-on: https://chromium-review.googlesource.com/622287
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495773}