base/message_loop/message_pump_default.cc
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/message_loop/message_pump_default.h"
 
+#include "base/auto_reset.h"
 #include "base/logging.h"
 #include "base/threading/thread_restrictions.h"
 #include "build/build_config.h"
@@ -20,11 +21,10 @@ MessagePumpDefault::MessagePumpDefault()
       event_(WaitableEvent::ResetPolicy::AUTOMATIC,
              WaitableEvent::InitialState::NOT_SIGNALED) {}
 
-MessagePumpDefault::~MessagePumpDefault() {
-}
+MessagePumpDefault::~MessagePumpDefault() {}
 
 void MessagePumpDefault::Run(Delegate* delegate) {
-  DCHECK(keep_running_) << "Quit must have been called outside of Run!";
+  AutoReset<bool> auto_reset_keep_running(&keep_running_, true);
 
   for (;;) {
 #if defined(OS_MACOSX)
@@ -62,8 +62,6 @@ void MessagePumpDefault::Run(Delegate* delegate) {
     // Since event_ is auto-reset, we don't need to do anything special here
     // other than service each delegate method.
   }
-
-  keep_running_ = true;
 }
 
 void MessagePumpDefault::Quit() {
